--- a/when_read_csv.ipynb
+++ b/when_read_csv.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -28,9 +28,8 @@
     "\n",
     "# I am (freelancer U consultant U trainer) ∩ Python 🐍\n",
     "\n",
-    "# @christianbarra\n",
-    "# me@chrisbarra.xyz\n",
-    "check pybootcamp.com"
+    "# Looking for Python courses?\n",
+    "# check pybootcamp.com"
    ]
   },
   {
@@ -46,35 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from urllib.request import urlretrieve\n",
-    "from multiprocessing import Pool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def months(from_month=1, to_month=12):\n",
-    "    list_months = []\n",
-    "    for i in range(from_month, to_month):\n",
-    "        if i < 10:\n",
-    "            list_months.append(f\"0{i}\")\n",
-    "        else:\n",
-    "            list_months.append(f\"{i}\")\n",
-    "    return list_months"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -180,7 +156,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -448,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -458,7 +434,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "my_data = pd.read_csv(\"s3://dask-data/nyc-taxi/2015/yellow_tripdata_2015-01.csv\", chunksize=1000, parse_dates=[\"tpep_pickup_datetime\", \"tpep_dropoff_datetime\"])"
@@ -467,7 +447,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -487,7 +471,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -505,10 +493,8 @@
     "for month in months(to_month=2):\n",
     "    data_set = f\"s3://dask-data/nyc-taxi/2015/yellow_tripdata_2015-{month}.csv\"\n",
     "    print(\"\\t\" + data_set)\n",
-    "    chunk = 0\n",
     "    my_data = pd.read_csv(data_set, chunksize=100000, parse_dates=[\"tpep_pickup_datetime\", \"tpep_dropoff_datetime\"])\n",
-    "    for df in my_data:\n",
-    "        chunk += 1\n",
+    "    for chunk, df in enumerate(my_data):\n",
     "        # do something\n",
     "        pass\n",
     "    print(f\"\\t\\tChunk number: {chunk}\")"
@@ -516,20 +502,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why we imported till June? \n",
-    "After that month the csv start to be `dirty`.....\n",
-    "So it will require some cleaning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "# It works but:\n",
-    "* Pandas wa made to work in memory and with datasets that fit it\n",
-    "* A little bit machinery to work with if you multiple files"
+    "* Pandas was made to work in memory and with datasets that fit it\n",
+    "* Note that `clean` and it starts to be complex to work with multiple files\n",
+    "* Slow....6 minutes just to parse the first month"
    ]
   },
   {
@@ -547,12 +529,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Dask is very cool and complex library and\n",
+    "you can schedule tasks locally and remotely"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "slideshow": {
      "slide_type": "-"
     }
    },
    "source": [
-    "Dask is a complex library (task is very complex).\n",
-    "To execute delayed task, both locally and remotely"
+    "# to install dask\n",
+    "pip install dask"
    ]
   },
   {
@@ -626,13 +620,24 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "source": [
     "# Graphs!\n",
     "\n",
     "Directed Acyclic Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Nothing is computed until...you compute it."
    ]
   },
   {
@@ -772,7 +777,11 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "import dask.dataframe as dd"
@@ -781,7 +790,11 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -802,7 +815,11 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1010,7 +1027,11 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1029,7 +1050,11 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1091,7 +1116,11 @@
   },
   {
    "cell_type": "raw",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "# To launch your worker\n",
     "dask-worker IP_SCHEDULER:PORT_SCHEDULER"
@@ -1099,7 +1128,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "This has been run on 3 machines with 8GB and 2 cores for each"
    ]
@@ -1109,7 +1142,7 @@
    "execution_count": 92,
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -1120,7 +1153,11 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "# I am connetting to a scheduler\n",
@@ -1130,7 +1167,11 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [],
    "source": [
     "df = dd.read_csv('s3://dask-data/nyc-taxi/2015/yellow_tripdata_2015-0*.csv',\n",
@@ -1141,7 +1182,11 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1159,32 +1204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7436eea1b3564e20b66ea615a060f5c6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "A Jupyter Widget"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "progress(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1418,7 +1443,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1452,7 +1477,7 @@
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
@@ -1471,6 +1496,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "fare_amount.compute()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -1478,19 +1513,18 @@
     }
    },
    "source": [
-    "* Implements a small part of the Pandas API\n"
+    "### Note: Dask implements a small part of the Pandas API"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "# awesome!\n",
-    "0.85 accuracy after the first iteration"
+    "# Thanks!"
    ]
   },
   {
@@ -1503,45 +1537,15 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "Dask in cool but a little bit `buggy` yet.\n",
-    "Avoid CSV, works good for us not for computers (check Parquet)\n",
+    "* Dask in cool but a little bit still `buggy`\n",
+    "* You can avoid JVM\n",
+    "* **Pandas and Scikit-learn are not aware of Dask**, but you can use them together\n",
+    "* Although parallel machine learning is not trivial and easy to do properly\n",
+    "* Avoid CSVs and start using Parquet\n",
     "\n",
     "I had to fight to use the cluster with local files, at the end I had to switch to S3\n",
     "\n",
-    "The task (distributed computing) is complex and the docs are not that good yet\n",
-    "Check the articles from http://matthewrocklin.com/blog/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Follow up\n",
-    "\n",
-    "Gimme a feedback!\n",
-    "\n",
-    "Check Dask documentation\n",
-    "\n",
-    "It's not easy to deal with imbalanced datasets.\n",
-    "\n",
-    "The problem that you will face is not related only to the data but also to the proper metrics to use.\n",
-    "\n",
-    "Specifically you can see that accuracy, ROC curve and AUC don't provide useful information to select a good model.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "Thanks!\n",
-    "\n",
-    "Don't forget: **Gimme a feedback!**\n",
-    "\n",
-    "**https://goo.gl/JAuNP3**"
+    "For more info check dask website and the articles from http://matthewrocklin.com/blog/"
    ]
   }
  ],
@@ -1561,7 +1565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
